@@ -38,10 +38,7 @@ function failure()
 #########################
 use_mount=false
 if [ x"$1" = x-m ]; then
-	shift
-	if [ -x /usr/bin/uck-remaster-mount ]; then
-		use_mount=true
-	fi
+	use_mount=true; shift
 fi
 
 REMASTER_HOME="$1"
@@ -58,16 +55,25 @@ fi
 	. /usr/lib/uck/remaster-live-cd.sh 2>/dev/null ||
 	failure "libraries not found"
 
-SQUASHFS_MOUNT_DIR="$REMASTER_HOME/squashfs-mount"
 SQUASHFS_IMAGE="$REMASTER_HOME/remaster-iso/casper/filesystem.squashfs"
 REMASTER_DIR="$REMASTER_HOME/remaster-root"
 
+# Check for previous use of union mounts and implicitly turn on -m iff found
+if [ -d "$REMASTER_DIR"-cache ]; then
+	use_mount=true
+fi
+
 if [ $use_mount = true ] && check_union_mounts; then
-	remove_remaster_dir
-	union_mount "$SQUASHFS_IMAGE" "$REMASTER_HOME/remaster-root"
+	# Mount r/W copy of rootfs on iso
+	if mountpoint "$REMASTER_DIR"; then
+		: do nothing - is already mounted
+	else
+		union_mount "$SQUASHFS_IMAGE" "$REMASTER_DIR" ||
+			failure "Can't union_mount $REMASTER_DIR"
+	fi
 else
 	if [ $use_mount = true ]; then
-		echo "Cannot use union mounts - \"-m\" option ignored!"
+		echo "Cannot use union mounts - using copy instead!"
 		use_mount=false
 	fi
 	remove_remaster_dir
